Use jdk17 API